--- a/src/app/components/ventana2/ventana2.component.html
+++ b/src/app/components/ventana2/ventana2.component.html
@@ -4,7 +4,18 @@
     <button (click)="pag_2()">Hobbies</button>
     <button (click)="pag_3()" >Profesion</button>
     <h1>HOBBIES</h1>
-    <h4>Me gusta jugar futbol, escuchar musica y descansar</h4>
+    <h3>Futbol</h3>
+    <h4>Me gusta jugar futbol, entrenaba desde pequeño, y me ha servido para estar saludable, 
+        aunque en este año solamente he podido jugar los domingos, pues como ya no hay clubs y
+        hay muchos deberes y pruebas, no tengo el tiempo suficiente
+    </h4><hr>
+    <h3>Videojuegos</h3>
+    <h4>Me encanta jugar videojuegos, pero la ultima vez que jugue uno fue como hace 3 meses, ahora solamente 
+        veo videos en Youtube o streams
+    </h4><hr>
+    <h3>Dormir</h3>
+    <h4>Es lo que mas me encanta del dia.
+    </h4><hr>
 </div>
 
 
