--- a/src/app/components/ventana3/ventana3.component.html
+++ b/src/app/components/ventana3/ventana3.component.html
@@ -4,6 +4,9 @@
     <button (click)="pag_2()">Hobbies</button>
     <button (click)="pag_3()" >Profesion</button>
     <h1>Profesion</h1>
-    <h4>NO TRABAJO, ESTUDIO EN LA UNIDAD EDUCATIVA TECNICO SALESIANO</h4>
+    <h4>NO trabajo, estudio en la Unidad Educativa Tecnico Salesiano
+    </h4>
+    <h4>Estoy en tercero de Bachillerato, falta poco para terminar el colegio. YA MISMO
+    </h4>
 </div>
 
