--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,5 +4,5 @@
     <button (click)="pag_2()">Hobbies</button>
     <button (click)="pag_3()" >Profesion</button>
     <h1>Blog-Capón Andy-3E1</h1>
-    <h4>Blog personal de Andy Capon-3E1-Programación Movil</h4>
+    <h4>Blog personal de Andy Capon- 3E1- Programación Movil</h4>
 </div>
