--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,4 +5,10 @@
     <button (click)="pag_3()" >Profesion</button>
     <h1>Blog-Capón Andy-3E1</h1>
     <h4>Blog personal de Andy Capon- 3E1- Programación Movil</h4>
+    <div>
+        <!--input [(ngModel)]="numero"-->
+    <strong>{{suma}}</strong><br>
+    <strong>{{suma2}}</strong>
+    <br>
+    </div>
 </div>
