Directiva_ng_comprobar

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,17 @@
 <div>
-    <button (click)="navegacion()">Pagina Principal</button>
-    <button (click)="navegar()" >Informacion</button>
-    <button (click)="pag_2()">Hobbies</button>
-    <button (click)="pag_3()" >Profesion</button>
-    <h1>Blog-Capón Andy-3E1</h1>
-    <h4>Blog personal de Andy Capon- 3E1- Programación Movil</h4>
-    <div>
-        <!--input [(ngModel)]="numero"-->
-    <strong>{{suma}}</strong><br>
-    <strong>{{suma2}}</strong>
-    <br>
-    </div>
+    <input [(ngModel)]="numero"/>
+    <br />
+<strong *ngIf="numero ==''">No hay numero</strong>
+<strong *ngIf="numero > 3">{{numero}}, El numero es mayor a 3</strong>
+<strong *ngIf="numero == 3">{{numero}}, El numero es 3</strong>
+<strong *ngIf="numero < 3 && numero>0">{{numero}}, El numero es menor que 3</strong>
+<strong *ngIf="numero < 0">{{numero}}, El numero es menor que 0</strong>
+</div>
+<h2>Numero: </h2><br>
+<h2>Sueldos:</h2>
+<ul *ngFor="let sueldos of sueldos">
+    <li>{{sueldos}}</li>
+</ul>
+<div *ngFor="let sueldo of sueldos">
+    <div>Sueldo: {{sueldo}}</div>
 </div>
