--- a/src/app/components/ventana1/ventana1.component.html
+++ b/src/app/components/ventana1/ventana1.component.html
@@ -12,4 +12,10 @@
         <li>Fecha de nacimiento: 20-6-2006</li>
     </ul>
 </div>
+<p>Valor recuperado</p>
+<p>{{resultado}}</p>
+<p>Texto recuperado</p>
+<p>{{mensaje}}</p>
+<hr>
+<h1>Insumo #6</h1>
 
