--- a/src/app/components/ventana3/ventana3.component.html
+++ b/src/app/components/ventana3/ventana3.component.html
@@ -9,4 +9,5 @@
     <h4>Estoy en tercero de Bachillerato, falta poco para terminar el colegio. YA MISMO
     </h4>
 </div>
-
+<hr>
+<h1>Insumo #6</h1>
